13/02-deploy-readiness.yaml
# 02-deploy-readiness.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-ready
  namespace: sd-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo-ready
  template:
    metadata:
      labels:
        app: echo-ready
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:1.0
          args: ["-text=ready-echo"]
          ports:
            - containerPort: 5678
          readinessProbe:
            httpGet:
              path: /
              port: 5678
            initialDelaySeconds: 10
            periodSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: echo-ready
  namespace: sd-lab
spec:
  selector:
    app: echo-ready
  ports:
    - name: http
      port: 80
      targetPort: 5678
  type: ClusterIP
