13/04-externalname.yaml
# 04-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-external
  namespace: sd-lab
spec:
  type: ExternalName
  externalName: httpbin.org
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-egress-for-dnsutils
  namespace: sd-lab
spec:
  podSelector:
    matchLabels:
      app: dnsutils
  policyTypes:
    - Egress
  egress:
    # 외부 접근 허용 (http, https)
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
    # DNS 조회를 위해 kube-dns (UDP/53)도 열어야 함
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
